--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cambiar Color del DIV con Bootstrap</title>
-    <!-- Agregar el enlace a Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Cambio de Color en RGB</title>
+    <!-- Agrega el enlace a Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         #miDiv {
             width: 100px;
             height: 100px;
-            background-color: rgb(0, 0, 0); /* Color inicial en negro */
-            margin-top: 20px; /* Espacio superior para separar del formulario */
+            background-color: rgb(255, 0, 0); /* Color inicial (rojo) */
+            margin-top: 20px;
         }
-        /* Estilo para el footer */
+        /* Estilo personalizado para el pie de página */
         footer {
             background-color: #f8f9fa;
-            padding: 10px 0;
+            padding: 10px;
             text-align: center;
         }
     </style>
@@ -24,80 +24,74 @@
 <body>
     <!-- Encabezado con barra de navegación -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="#">Mi Sitio Web</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Acerca de</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-info"
+        >
+            <a class="navbar-brand" href="#">JTULIO</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Acerca de</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Graficación</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
 
     <!-- Contenido principal -->
-    <div class="container mt-5">
-        <h1>Cambiar Color del DIV</h1>
-        <div id="miDiv"></div>
-        <form class="mt-4">
-            <div class="mb-3">
-                <label for="red" class="form-label">Rojo:</label>
-                <input type="range" class="form-range" id="red" min="0" max="255" value="0">
-            </div>
-            <div class="mb-3">
-                <label for="green" class="form-label">Verde:</label>
-                <input type="range" class="form-range" id="green" min="0" max="255" value="0">
-            </div>
-            <div class="mb-3">
-                <label for="blue" class="form-label">Azul:</label>
-                <input type="range" class="form-range" id="blue" min="0" max="255" value="0">
-            </div>
-        </form>
+    <div class="container">
+        <h1 class="mt-4">Cambiar Tonalidad de Color en RGB</h1>
+        <div id="miDiv" class="mb-4"></div>
+        <div class="form-group">
+            <label for="red">Rojo:</label>
+            <input type="range" class="form-control" id="red" min="0" max="255" value="255">
+        </div>
+        <div class="form-group">
+            <label for="green">Verde:</label>
+            <input type="range" class="form-control" id="green" min="0" max="255" value="0">
+        </div>
+        <div class="form-group">
+            <label for="blue">Azul:</label>
+            <input type="range" class="form-control" id="blue" min="0" max="255" value="0">
+        </div>
     </div>
 
-    <!-- Pie de página con datos de copyright -->
+    <!-- Pie de página -->
     <footer>
-        <div class="container">
-            <p>&copy; 2023 Mi Sitio Web. Todos los derechos reservados.</p>
-        </div>
+        <div class=""p-3 mb-2 .bg-info text-white></div>
+        <p>&copy; 2023 JULIO EDUARDO MOEDANO MEJIA - Todos los derechos reservados</p>
     </footer>
 
-    <!-- Agregar el enlace a Bootstrap JS (jQuery y Popper.js son necesarios) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agrega los enlaces a Bootstrap JS y jQuery al final del body para que funcione correctamente -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
-        const redInput = document.getElementById('red');
-        const greenInput = document.getElementById('green');
-        const blueInput = document.getElementById('blue');
-        const miDiv = document.getElementById('miDiv');
+        const redSlider = document.getElementById("red");
+        const greenSlider = document.getElementById("green");
+        const blueSlider = document.getElementById("blue");
+        const miDiv = document.getElementById("miDiv");
 
-        // Función para actualizar el color del div
+        redSlider.addEventListener("input", actualizarColor);
+        greenSlider.addEventListener("input", actualizarColor);
+        blueSlider.addEventListener("input", actualizarColor);
+
         function actualizarColor() {
-            const red = redInput.value;
-            const green = greenInput.value;
-            const blue = blueInput.value;
-
-            const colorRGB = `rgb(${red}, ${green}, ${blue})`;
-            miDiv.style.backgroundColor = colorRGB;
+            const redValue = redSlider.value;
+            const greenValue = greenSlider.value;
+            const blueValue = blueSlider.value;
+            
+            miDiv.style.backgroundColor = `rgb(${redValue}, ${greenValue}, ${blueValue})`;
         }
-
-        // Escuchar cambios en los controles
-        redInput.addEventListener('input', actualizarColor);
-        greenInput.addEventListener('input', actualizarColor);
-        blueInput.addEventListener('input', actualizarColor);
     </script>
 </body>
 </html>
